--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -133,6 +133,9 @@
                                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="showAnswersList:" destination="bCr-2z-dpc" eventType="touchUpInside" id="KsV-Oy-Ng5"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dSI-ap-55d">
                                             <rect key="frame" x="390" y="62" width="87" height="32"/>
@@ -198,6 +201,7 @@
                         <outlet property="addQuestion" destination="2FM-gE-IYr" id="zIK-8P-cPY"/>
                         <outlet property="sidebarButton" destination="wxV-oX-zhg" id="eJ1-qO-XHG"/>
                         <segue destination="L2G-jD-e0s" kind="presentation" identifier="showQuestionForm" id="Zma-F1-cBs"/>
+                        <segue destination="8TF-aP-r7l" kind="show" identifier="showAnswersListForQuestion" id="1uy-uL-sgR"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUx-wJ-w8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1195,11 +1199,12 @@
         <image name="settings48.png" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ogc-fD-TQd"/>
-        <segue reference="4oy-yi-Vs6"/>
         <segue reference="uQv-Ln-Urv"/>
         <segue reference="j2K-an-z6G"/>
         <segue reference="jdO-yh-WYz"/>
+        <segue reference="1uy-uL-sgR"/>
         <segue reference="Zma-F1-cBs"/>
+        <segue reference="Ogc-fD-TQd"/>
+        <segue reference="4oy-yi-Vs6"/>
     </inferredMetricsTieBreakers>
 </document>
