--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -1098,8 +1098,69 @@
                     <view key="view" contentMode="scaleToFill" id="cQK-sV-pPu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cxD-cN-4JU">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="userAnswersCell" rowHeight="110" id="cc1-dG-Uz5" customClass="UserAnswersTableViewCell">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cc1-dG-Uz5" id="dGe-gG-zTk">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2a-8n-bbp">
+                                                    <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="9nT-CJ-do6"/>
+                                                        <constraint firstAttribute="height" constant="60" id="GyU-T9-rQI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZZ-Jv-QuH">
+                                                    <rect key="frame" x="76" y="23" width="516" height="30"/>
+                                                    <state key="normal" title="Button">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nqA-B0-6tS">
+                                                    <rect key="frame" x="8" y="61" width="584" height="40"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </webView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="aZZ-Jv-QuH" firstAttribute="trailing" secondItem="dGe-gG-zTk" secondAttribute="trailingMargin" id="7gf-nb-3wa"/>
+                                                <constraint firstItem="M2a-8n-bbp" firstAttribute="leading" secondItem="dGe-gG-zTk" secondAttribute="leadingMargin" id="EI2-XY-jPK"/>
+                                                <constraint firstItem="aZZ-Jv-QuH" firstAttribute="leading" secondItem="M2a-8n-bbp" secondAttribute="trailing" constant="8" id="eZY-hG-xCQ"/>
+                                                <constraint firstItem="aZZ-Jv-QuH" firstAttribute="top" secondItem="dGe-gG-zTk" secondAttribute="topMargin" constant="15" id="nob-r1-OZe"/>
+                                                <constraint firstItem="M2a-8n-bbp" firstAttribute="top" secondItem="dGe-gG-zTk" secondAttribute="topMargin" id="v9Z-0z-tFD"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="answerQuestion" destination="aZZ-Jv-QuH" id="mVU-n9-5Hn"/>
+                                            <outlet property="answerRate" destination="M2a-8n-bbp" id="OdA-HV-Fko"/>
+                                            <outlet property="answerText" destination="nqA-B0-6tS" id="nYn-l5-uCb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="mBo-Nb-Ujf" id="wzd-We-mqq"/>
+                                    <outlet property="delegate" destination="mBo-Nb-Ujf" id="9ya-OQ-KgM"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cxD-cN-4JU" firstAttribute="leading" secondItem="cQK-sV-pPu" secondAttribute="leadingMargin" constant="-16" id="cd3-I4-bLM"/>
+                            <constraint firstItem="cxD-cN-4JU" firstAttribute="top" secondItem="cQK-sV-pPu" secondAttribute="topMargin" id="flD-qI-ugZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cxD-cN-4JU" secondAttribute="trailing" constant="-16" id="toF-DW-3oz"/>
+                            <constraint firstItem="7GS-2G-vwx" firstAttribute="top" secondItem="cxD-cN-4JU" secondAttribute="bottom" id="zXn-nZ-sqO"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="cxD-cN-4JU" id="k3l-Hz-Od8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GRi-lf-lls" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
